--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --main-white: #f0f0f0;
     --main-green: #8aff80;
-    --main-blue: #45567d;
+    --main-blue: rgba(35, 40, 51, 0.863);
     --main-gray: #303841;
     --nav-text: #000;
 }
@@ -15,14 +15,6 @@
 .about-card {
     color: gray;
 }
-
-.about-card:hover {
-    color: var(--nav-text);
-    text-decoration: underline;
-    transform: scale(101%);
-    transition: ease-in .5s;
-}
-
 
 .card-links,
 .card-links:hover {
@@ -49,20 +41,13 @@
     color: var(--main-green);
 }
 
-.btn-light:hover {
-    background-color: var(--main-green) !important;
-    transition: .5s ease-out !important;
-    transform: scale(105%);
-}
-
-
 .contact-links a {
     color: var(--main-white);
     text-decoration: none;
 }
 
 .contact-links a:hover {
-    color: var(--main-green)
+    color: var(--main-green);
 }
 
 .contact-details {
@@ -72,5 +57,191 @@
 }
 
 .contact-details:hover {
-    transform: translateY(8px);
+    transform: scale(105%);
+}
+
+.accordion-button {
+    text-align: center !important;
+}
+
+
+/*###### ABOUT LOAD ANIMATION ######*/
+p {
+    transform: scale(0.94);
+    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+    text-align: center;
+}
+
+
+@keyframes scale {
+    100% {
+        transform: scale(1);
+    }
+}
+
+.run-animation {
+    display: inline-block;
+    opacity: 0;
+    filter: blur(4px);
+    color: green;
+}
+
+span:nth-child(1) {
+    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(2) {
+    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(3) {
+    animation: fade-in 0.8s 0.3s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(4) {
+    animation: fade-in 0.8s 0.4s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(5) {
+    animation: fade-in 0.8s 0.5s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(6) {
+    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(7) {
+    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(8) {
+    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(9) {
+    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(10) {
+    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(11) {
+    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(12) {
+    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(13) {
+    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(14) {
+    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(15) {
+    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(16) {
+    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(17) {
+    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(18) {
+    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(19) {
+    animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(20) {
+    animation: fade-in 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(21) {
+    animation: fade-in 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(22) {
+    animation: fade-in 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(23) {
+    animation: fade-in 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(24) {
+    animation: fade-in 0.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(25) {
+    animation: fade-in 0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(26) {
+    animation: fade-in 0.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(27) {
+    animation: fade-in 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(28) {
+    animation: fade-in 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+span:nth-child(29) {
+    animation: fade-in 0.8s 2.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+}
+
+
+@keyframes fade-in {
+    100% {
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+/*##### END OF LOAD ANIMATION #####*/
+
+.btn-green {
+    background-color: var(--main-green) !important;
+    color: black !important;
+    border-color: var(--main-blue) !important;
+}
+
+.btn-green:hover {
+    opacity: .6;
+    transition: ease-in-out .3s !important;
+    transform: scale(95%) !important;
+}
+
+.btn-light:hover {
+    background-color: var(--main-green) !important;
+    transition: .5s ease-out !important;
+    transform: scale(105%);
+}
+
+.btn-light-sm {
+    background-color: white;
+    border: 1px solid var(--main-blue) !important;
+}
+
+.btn-light-sm:hover {
+    background-color: var(--main-green) !important;
+    transform: scale(95%) !important;
+    transition: ease-in-out .3s !important;
+    opacity: .6;
+}
+
+.bg-blue {
+    background-color: var(--main-blue) !important;
 }
