--- a/style.css
+++ b/style.css
@@ -1,247 +1,243 @@
 :root {
-    --main-white: #f0f0f0;
-    --main-green: #8aff80;
-    --main-blue: rgba(35, 40, 51, 0.863);
-    --main-gray: #303841;
-    --nav-text: #000;
+  --main-white: #f0f0f0;
+  --main-green: #8aff80;
+  --main-blue: rgba(35, 40, 51, 0.863);
+  --main-gray: #303841;
+  --nav-text: #000;
 }
 
 .img-sizing {
-    height: 300px;
-    width: 100%;
+  height: 300px;
+  width: 100%;
 }
 
-
 .about-card {
-    color: gray;
+  color: gray;
 }
 
 .card-links,
 .card-links:hover {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .projects {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .projects:hover {
-    transform: scale(105%);
-    transition: all .5s;
-    opacity: 50%;
-} 
+  transform: scale(105%);
+  transition: all 0.5s;
+  opacity: 50%;
+}
 
 .code {
-    color: #212529;
-    transition: color .5s ease-out;
+  color: #212529;
+  transition: color 0.5s ease-out;
 }
 
 .card:hover .code {
-    color: var(--main-green);
+  color: var(--main-green);
 }
 
 .contact-links a {
-    color: var(--main-white);
-    text-decoration: none;
+  color: var(--main-white);
+  text-decoration: none;
 }
 
 .contact-links a:hover {
-    color: var(--main-green);
+  color: var(--main-green);
 }
 
 .contact-details {
-    font-size: 2.4rem;
-    text-shadow: 2px 2px 1px #1f1f1f;
-    transition: 0.5s ease-in-out;
+  font-size: 2.4rem;
+  text-shadow: 2px 2px 1px #1f1f1f;
+  transition: 0.5s ease-in-out;
 }
 
 .contact-details:hover {
-    transform: scale(105%);
+  transform: scale(105%);
 }
 
 .accordion-button {
-    text-align: center !important;
+  text-align: center !important;
 }
-
 
 /*###### ABOUT LOAD ANIMATION ######*/
 p {
-    transform: scale(0.94);
-    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
-    text-align: center;
+  transform: scale(0.94);
+  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+  text-align: center;
 }
 
-
 @keyframes scale {
-    100% {
-        transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .run-animation {
-    display: inline-block;
-    opacity: 0;
-    filter: blur(4px);
-    color: green;
+  display: inline-block;
+  opacity: 0;
+  filter: blur(4px);
+  color: green;
 }
 
 span:nth-child(1) {
-    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(2) {
-    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(3) {
-    animation: fade-in 0.8s 0.3s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(4) {
-    animation: fade-in 0.8s 0.4s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(5) {
-    animation: fade-in 0.8s 0.5s  forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(6) {
-    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(7) {
-    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(8) {
-    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(9) {
-    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(10) {
-    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(11) {
-    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(12) {
-    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(13) {
-    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(14) {
-    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(15) {
-    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(16) {
-    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(17) {
-    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(18) {
-    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(19) {
-    animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(20) {
-    animation: fade-in 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(21) {
-    animation: fade-in 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(22) {
-    animation: fade-in 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(23) {
-    animation: fade-in 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(24) {
-    animation: fade-in 0.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(25) {
-    animation: fade-in 0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(26) {
-    animation: fade-in 0.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(27) {
-    animation: fade-in 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(28) {
-    animation: fade-in 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 span:nth-child(29) {
-    animation: fade-in 0.8s 2.9s forwards cubic-bezier(0.11, 0, 0.5, 0)
+  animation: fade-in 0.8s 2.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
-
 @keyframes fade-in {
-    100% {
-        opacity: 1;
-        filter: blur(0);
-    }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
 }
 
 /*##### END OF LOAD ANIMATION #####*/
 
 .btn-green {
-    background-color: var(--main-green) !important;
-    color: black !important;
-    border-color: var(--main-blue) !important;
+  background-color: var(--main-green) !important;
+  color: black !important;
+  border-color: var(--main-blue) !important;
 }
 
 .btn-green:hover {
-    opacity: .6;
-    transition: ease-in-out .3s !important;
-    transform: scale(95%) !important;
+  opacity: 0.6;
+  transition: ease-in-out 0.3s !important;
+  transform: scale(95%) !important;
 }
 
 .btn-light:hover {
-    background-color: var(--main-green) !important;
-    transition: .5s ease-out !important;
-    transform: scale(105%);
+  background-color: var(--main-green) !important;
+  transition: 0.5s ease-out !important;
+  transform: scale(105%);
 }
 
 .btn-light-sm {
-    background-color: white;
-    border: 1px solid var(--main-blue) !important;
+  background-color: white;
+  border: 1px solid var(--main-blue) !important;
 }
 
 .btn-light-sm:hover {
-    background-color: var(--main-green) !important;
-    transform: scale(95%) !important;
-    transition: ease-in-out .3s !important;
-    opacity: .6;
+  background-color: var(--main-green) !important;
+  transform: scale(95%) !important;
+  transition: ease-in-out 0.3s !important;
+  opacity: 0.6;
 }
 
 .bg-blue {
-    background-color: var(--main-blue) !important;
+  background-color: var(--main-blue) !important;
 }
